--- a/index.html
+++ b/index.html
@@ -1,80 +1,76 @@
 
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title> Maya Maria Biscotaria PET</title>
-<style>
-:root {
---cor-primaria: #b42d37; /* Vermelho suave da fita */
---cor-escura: #1c1c1c; /* Preto/charcoal da pelagem */
---cor-clara: #f7f2e9; /* Creme bege suave combinando com o fundo da logo */
---cor-cinza: #444;
---cor-borda: #d8c7a8;
---cor-destaque: #b42d37;
+background: var(--cor-primaria);
+color: #fff;
+padding: 4px 9px;
+border-radius: 20px;
+font-size: 12px;
+font-weight: bold;
 }
 
 
-body {
-margin: 0;
-font-family: "Arial", sans-serif;
-background: var(--cor-clara);
-color: var(--cor-escura);
-}
-
-
-.container {
-max-width: 850px;
-margin: 0 auto;
-background: #fff;
-box-shadow: 0 0 12px rgba(0,0,0,0.08);
-}
-
-
-/* -------------------------------------------- HEADER */
-.header-bg {
-background: var(--cor-clara);
-padding: 35px 0 25px 0;
-text-align: center;
-border-bottom: 3px solid var(--cor-destaque);
-}
-
-
-.logo-circle {
-display: inline-block;
-background: #fff;
-padding: 12px;
-border-radius: 50%;
-border: 4px solid var(--cor-destaque);
-box-shadow: 0 0 10px rgba(0,0,0,0.12);
-}
-
-
-.logo-circle img {
-width: 120px;
-height: 120px;
-border-radius: 50%;
-}
-
-
-.header-main-info {
-display: flex;
-justify-content: space-between;
-align-items: center;
-padding: 15px 20px;
-background: var(--cor-clara);
-border-bottom: 2px solid var(--cor-borda);
-}
-
-
-.header-main-info h1 {
-margin: 0;
-font-size: 17px;
+.item-name {
+font-size: 19px;
 font-weight: bold;
 color: var(--cor-escura);
-text-transform: uppercase;
-letter-spacing: 1px;
+margin-left: 8px;
+}
+
+
+.item-price {
+font-size: 19px;
+font-weight: bold;
+color: var(--cor-primaria);
+}
+
+
+.item-weight {
+font-size: 14px;
+font-style: italic;
+color: #666;
+margin-top: 5px;
+}
+
+
+.item-descricao {
+margin-top: 10px;
+font-size: 14px;
+line-height: 1.5;
+color: #555;
+}
+
+
+/* -------------------------------------------- VÍDEO */
+.video-indicator {
+background: var(--cor-primaria);
+color: #fff;
+border: none;
+padding: 10px 18px;
+border-radius: 25px;
+font-size: 13px;
+font-weight: bold;
+margin-top: 10px;
+cursor: pointer;
+transition: 0.25s;
+}
+
+
+.video-indicator:hover {
+transform: scale(1.06);
+background: #8f1f28;
+}
+
+
+/* -------------------------------------------- FOOTER */
+footer {
+text-align: center;
+padding: 18px;
+margin-top: 20px;
+font-size: 12px;
+background: var(--cor-clara);
+border-top: 2px solid var(--cor-borda);
+color: #555;
 }
 </style>
 </head>
