📦 Upload do arquivo index.html

--- a/index.html
+++ b/index.html
@@ -942,7 +942,7 @@
 
     <footer>
       <div style="font-weight:700">APRECIE</div>
-      <div style="margin-top:8px; font-size:13px; color:var(--muted)">Atualizado em 19/11/2025 • Que seu dia sejam iluminadas! ✨</div>
+      <div style="margin-top:8px; font-size:13px; color:var(--muted)">Atualizado em 19/11/2025 • Que seu dia seja iluminadas! ✨</div>
     </footer>
   </div>
 
